--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
   <div class="logo">
     <img src="assets/logo.png" alt="Logo de HHR" loading="lazy">
   </div>
-  <p>Amo refrescar marcas, envío correos diarios que pueden servirte a mejorar tu imagen de marca, fidelizar o atraer nuevos clientes.</p>
+  <p>aAmo refrescar marcas, envío correos diarios que pueden servirte a mejorar tu imagen de marca, fidelizar o atraer nuevos clientes.</p>
   <p class="highlight">Regístrate hoy y recibe:</p>
   <p>- 1 diagnóstico gratuito de tu marca (solo por febrero 2025).</p>
   <p>- Mail diario en tu bandeja de entrada.</p>
